[gd_scene load_steps=17 format=3 uid="uid://dscraullb0bah"]

[ext_resource type="Script" uid="uid://fymndo0lpif2" path="res://Scripts/Items/upgrade_item.gd" id="1_dbs7w"]
[ext_resource type="PackedScene" uid="uid://c0ltolgyfraym" path="res://Scenes/Items/interaction_component.tscn" id="2_5kjme"]
[ext_resource type="Texture2D" uid="uid://bgnk58vy4ir8f" path="res://Upgrades/Upgrades.png" id="3_yat87"]
[ext_resource type="Texture2D" uid="uid://bxjhch64puryw" path="res://Sprites/flashes.png" id="4_5kjme"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kjme"]
size = Vector2(72, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_aehgt"]
atlas = ExtResource("3_yat87")
region = Rect2(0, 0, 16, 16)
filter_clip = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aehgt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yeryr"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_yat87"]
atlas = ExtResource("4_5kjme")
region = Rect2(188, 3, 3, 3)

[sub_resource type="Gradient" id="Gradient_oybo2"]
offsets = PackedFloat32Array(0.4, 0.6)
colors = PackedColorArray(0, 0.686275, 1, 1, 0, 1, 1, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture1D" id="GradientTexture1D_38f2o"]
gradient = SubResource("Gradient_oybo2")

[sub_resource type="Gradient" id="Gradient_0jkeu"]
offsets = PackedFloat32Array(0.427273, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_43gjd"]
gradient = SubResource("Gradient_0jkeu")

[sub_resource type="Curve" id="Curve_h0pj8"]
_limits = [0.3, 6.0, 0.0, 1.0]
_data = [Vector2(0, 6), 0.0, 0.0, 0, 0, Vector2(1, 3.5), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tmn5x"]
curve = SubResource("Curve_h0pj8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vwgwf"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 14, 0)
direction = Vector3(0, -1, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 180.0
linear_accel_min = -50.0
linear_accel_max = 150.0
scale_curve = SubResource("CurveTexture_tmn5x")
color_ramp = SubResource("GradientTexture1D_43gjd")
color_initial_ramp = SubResource("GradientTexture1D_38f2o")

[node name="Upgrade Item" type="StaticBody2D" node_paths=PackedStringArray("item_particles")]
y_sort_enabled = true
collision_mask = 2
script = ExtResource("1_dbs7w")
item_particles = NodePath("Item Particles")

[node name="Interaction Component" parent="." instance=ExtResource("2_5kjme")]
scale = Vector2(1.5, 1.5)
scale_bonus = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5kjme")
disabled = true

[node name="Item Particles" type="GPUParticles2D" parent="."]
emitting = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.5, 3.5)
texture = SubResource("AtlasTexture_aehgt")
region_rect = Rect2(16, 0, 16, 15)

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 3
offset_left = -400.0
offset_top = -100.0
offset_right = -200.0
offset_bottom = 100.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aehgt")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxFlat_yeryr")

[node name="Description" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 1
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Price" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme_override_colors/font_color = Color(1, 0.784314, 0, 1)
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spawn Particles" type="GPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 20
texture = SubResource("AtlasTexture_yat87")
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_vwgwf")
metadata/_edit_lock_ = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="body_entered" from="Interaction Component" to="." method="_on_interaction_component_body_entered"]
[connection signal="body_exited" from="Interaction Component" to="." method="_on_interaction_component_body_exited"]
[connection signal="interacted" from="Interaction Component" to="." method="_on_interaction_component_interacted"]
